# nod_detector

./: .buildinfo  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  Dockerfile  LICENSE  README.md  api.html  changelog.html  contributing.html  docker-compose.yml  examples.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  quickstart.html  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.py  test_video_output.py  usage.html
.github/workflows/: ci.yml  docs.yml
_modules/: index.html
_modules/nod_detector/pipeline/: base_pipeline.html  video_processing_pipeline.html
_sources/: contributing.rst.txt  index.rst.txt  installation.rst.txt
docs/: api.rst  changelog.rst  conf.py  examples.rst  index.rst  quickstart.rst  usage.rst
docs/_build/html/: index.html  searchindex.js
docs/_static/: custom.css
src/: __init__.py  main.py
src/nod_detector/: __init__.py  __main__.py  cli.py  mediapipe_components.py  nod_detection.py  output_utils.py
src/nod_detector/pipeline/: __init__.py  base_pipeline.py  video_processing_pipeline.py
tests/: __init__.py  conftest.py
tests/integration/: test_pipeline_integration.py
tests/unit/: test_cli.py  test_main.py  test_mediapipe_components.py  test_nod_detection.py  test_output_utils.py  test_video_processing_pipeline.py
