[project]
name = "nod-detector"
version = "0.1.0"
description = "A system for detecting nodding behavior in videos"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Kagan Kucukaytekin", email = "kkaytekin@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.20.0",
    "opencv-python>=4.5.1.48",
    "mediapipe>=0.8.9.1",
]

[project.urls]
homepage = "https://github.com/kkaytekin/nod_detector"
"bug-tracker" = "https://github.com/kkaytekin/nod_detector/issues"
documentation = "https://nod-detector.readthedocs.io"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = false
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v -s"
filterwarnings = ["error"]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.5",
    "pytest-cov>=2.12.1",
    "pytest-mock>=3.6.1",
    "pytest-xdist>=2.3.0",
    "pytest-timeout>=2.0.0",
    "pytest-benchmark>=3.4.1",
    "pytest-sugar>=0.9.4",
    "black>=21.12b0",
    "isort>=5.10.1",
    "flake8>=4.0.1",
    "mypy>=0.931",
    "pre-commit>=2.15.0",
]
